infra/k8s/terraform/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - taskboard.cloud
    - www.taskboard.cloud
    secretName: tls-cert
  rules:
  - host: www.taskboard.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: taskboard-app-svc
            port:
              number: 80
