infra/k8s/terraform/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: ${namespace}
spec:
  ingressClassName: nginx
  tls:
  - host:
    - metrics.taskboard.cloud
    secretName: tls-cert
  rules:
  - host: metrics.taskboard.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-grafana
            port:
              number: 80
