infra/k8s/terraform/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskboard-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - taskboard.cloud
    secretName: tls-cert
  rules:
  - host: taskboard.cloud
    http:
      paths:
      - path: /task
        pathType: Prefix
        backend:
          service:
            name: task-svc
            port:
              number: 80
      - path: /project
        pathType: Prefix
        backend:
          service:
            name: project-svc
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: taskboard-app-svc
            port:
              number: 80
