infra/k8s/terraform/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: taskboard-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - taskboard.cloud
    secretName: tls-secret
  rules:
  - host: taskboard.cloud
    http:
      paths:
      - path: /task(/|$)(.*)
        pathType: Exact
        backend:
          service:
            name: task-svc
            port:
              number: 80
      - path: /project(/|$)(.*)
        pathType: Exact
        backend:
          service:
            name: project-svc
            port:
              number: 80
      - path: /grafana(/|$)(.*)
        pathType: Exact
        backend:
          service:
            name: prometheus-stack-grafana
            port:
              number: 80
      - path: /()(.*)
        pathType: Exact
        backend:
          service:
            name: taskboard-app-svc
            port:
              number: 80
