infra/k8s/terraform/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: taskboard.cloud
    http:
      paths:
      - path: /kibana(/|$)(.*)
        pathType: Exact
        backend:
          service:
            name: taskboard-kb-http
            port:
              name: http
